did stuff, see description - todo added to - added "loading..." to playmenu - glittering sped up (so it's actually perceivable)

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,20 @@
+
+< in no particular order >
+
 - optimize playmenu rendering
 - add HUD
 - add border to world gen
+- game modes
+  - rounds
+- "edit server" functionality
+- text file exception handling
+- more settings
+  - color scheme something in settings
+- better music (atmospheric maybe?)
+- tutorial maybe
+- comment all the code
+- something about names or idetifyers for you/other players (like agario?)
+- fix pie chart scaling
 - 
+
+- more ideas for TODOs
