--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,26 @@
 
 < in no particular order >
 
-- optimize playmenu rendering
++ RALLLLAAAAAAAH!
 - add HUD
+- more settings
+  - color scheme something in settings
+- fix pie chart scaling
+- play tutorial maybe
+- text file exception handling
+- better music (atmospheric maybe?)
+- framework for different game modes (the menu crap for that)
+
++ OSTIN?!?
+- color scheme framework
 - game modes
   - rounds
   - single player
-- "edit server" functionality
-- text file exception handling
-- more settings
-  - color scheme something in settings
-- better music (atmospheric maybe?)
-- play tutorial maybe
+  - sudden death
+  - capture the flag / find something
+  - race?
+
+- optimize playmenu rendering
+- more ideas for TODOs
 - comment all the code / organize it
 - something about names or idetifyers for you/other players (like agario?)
-- fix pie chart scaling
-
-- more ideas for TODOs
