--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,7 @@
 - play tutorial maybe
 - text file exception handling
 - better music (atmospheric maybe?)
-- framework for different game modes (the menu crap for that)
+- framework for different game modes (the menu crap for that)   <-- DO THIS SO THAT I (OSTIN?!?) CAN DO GAME MODE STUFF
 
 + OSTIN?!?
 - color scheme framework
