--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,7 @@
 
 + OSTIN?!?
 - STOP PROCRASTINATING ON YOUR STUPID PHYSICS HOMEWORK
+-  AND HISTORY ESSAY
 - special abilities
   - more mass gained from eating amoebas
   - speed buff while attacking
